--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,14 @@
 </head>
 
 <h1>Welcome</h1>
+  <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
+<script>
+  var config = {
+    apiKey: "AIzaSyDnb6fY1H96AzDEKBBu-ybiOaqHmQ_mJgU",
+    authDomain: "trial-project-380206.firebaseapp.com",
+  };
+  firebase.initializeApp(config);
+</script>
 
 <div class="img_google">
 <img src="https://seeklogo.com/images/G/google-cloud-logo-ADE788217F-seeklogo.com.png" alt="Flowers in Chania" width="70" height="70">
