--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
 <head>
 
   <title>GCP Uploader</title>
+  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebaseui.js"></script>
+<link rel='icon' href='favicon.ico' type='image/x-icon'/>
     <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
 <script>
   var config = {
